# S7_test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: __init__.py  dependencies.py  entities.py  main.py  router.py  settings.py
src/database/: db_service.py  models.py
src/file_service/: service.py
src/tests/: conftest.py  test_api.py  test_file_service.py
src/tmp/ln/: 20221129_122134_DME.csv
